--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -27,7 +27,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:hint="   Busca..."
+        android:paddingLeft="10dp"
+        android:hint="Busca..."
         android:layout_marginTop="80dp"/>
 
     <ImageButton
@@ -41,6 +42,18 @@
         android:background="@color/transparent"
         app:tint="@color/black"/>
 
+    <ImageButton
+        android:id="@+id/filter"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/filter_list"
+        app:layout_constraintRight_toRightOf="@id/search"
+        app:layout_constraintTop_toTopOf="@id/search"
+        android:layout_marginEnd="-40dp"
+        android:layout_marginTop="4dp"
+        android:background="@color/transparent"
+        app:tint="@color/white"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notes"
         android:layout_height="500dp"
@@ -52,5 +65,6 @@
         />
 
     <include layout="@layout/bottom_navigation_menu"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
