--- a/NotesKeeper/app/src/main/res/menu/bottom_menu.xml
+++ b/NotesKeeper/app/src/main/res/menu/bottom_menu.xml
@@ -6,7 +6,7 @@
         android:title="@string/home"
         />
     <item
-        android:id="@+id/bin"
+        android:id="@+id/nav_bin"
         android:icon="@drawable/bin"
         android:title="@string/bin"
         />
