--- a/NotesKeeper/app/src/main/res/layout/fragment_settings.xml
+++ b/NotesKeeper/app/src/main/res/layout/fragment_settings.xml
@@ -18,13 +18,9 @@
             android:gravity="center"
             android:text="Configuració"
             android:textColor="@color/white"
-            android:textAlignment="gravity"
             android:textSize="24dp"
             android:textStyle="bold"
-            android:layout_marginTop="10dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
+            android:layout_marginTop="30dp"
             />
 
         <TextView
@@ -44,7 +40,7 @@
             />
 
         <Button
-            android:id="@+id/btn_sigin"
+            android:id="@+id/btnSignIn"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:text="Inicia la sessió"
@@ -72,7 +68,6 @@
         <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="80dp"
-
             android:layout_marginLeft="10dp">
 
             <RadioButton
@@ -116,6 +111,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:backgroundTint="@color/background_button"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     </LinearLayout>
