--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -58,7 +58,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:id="@+id/email"
+                android:id="@+id/txtEmail"
                 android:background="@color/white"
                 android:layout_marginBottom="24dp"
                 android:paddingStart="16dp"
@@ -81,7 +81,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:id="@+id/password"
+                android:id="@+id/txtPassword"
                 android:background="@color/white"
                 android:layout_marginBottom="32dp"
                 android:paddingStart="16dp"
@@ -140,8 +140,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:cornerRadius="12dp"
         />
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
