--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
 
-    <style name="Base.Theme.NoteKeeper" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <!-- Base application theme -->
+    <style name="Base.Theme.notekeeper" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here -->
     </style>
 
-    <style name="Theme.NoteKeeper" parent="Base.Theme.NoteKeeper" />
+    <style name="Theme.notekeeper" parent="Base.Theme.notekeeper" />
 
-    <style name="SplashTheme" parent="Theme.SplashScreen">
+    <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/background_app</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/notekeeper</item>
-        <item name="postSplashScreenTheme">@style/Base.Theme.NoteKeeper</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/gif_notes</item>
         <item name="windowSplashScreenAnimationDuration">1000</item>
+        <item name="postSplashScreenTheme">@style/Base.Theme.notekeeper</item>
     </style>
+
 </resources>
