--- a/app/src/main/res/layout/note.xml
+++ b/app/src/main/res/layout/note.xml
@@ -12,7 +12,7 @@
 
 
         <TextView
-            android:id="@+id/tvTitle"
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="25dp"
             android:layout_marginLeft="10dp"
@@ -21,7 +21,7 @@
             android:text="Nom de la nota (PLACEHOLDER)"/>
 
         <TextView
-            android:id="@+id/tvSubtitle"
+            android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:layout_marginTop="25dp"
