--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -47,6 +47,7 @@
 
 
             <TextView
+                android:id="@+id/tvEmailLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -70,6 +71,7 @@
 
 
             <TextView
+                android:id="@+id/tvPassLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Contrasenya"
